# R2-Manager

./: .env.example  .gitignore  Build.md  CHANGELOG.md  CLAUDE.md  README.md  build.bat  bump-version.js  clean.bat  index.html  package-lock.json  package.json  vite.config.ts
docs/: files_operations_plan.md  multi_thread_transfer_plan.md  preview_plan.md
docs/DBG/: dbg_transfer.md  upload-progress-fix.md
docs/completed_plans/: files_operations_plan.md  multi_thread_transfer_plan.md
docs/superpowers/specs/: 2026-03-15-conflict-dialog-interaction-design.md
scripts/: get-etag.js  kill.bat
server/: index.js  package-lock.json  package.json
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer.nsi
src-tauri/src/: main.rs
src/components/bucket/: BucketCard.tsx  BucketList.tsx  (+2 more)
src/hooks/: useBuckets.ts  useConfig.ts  useFiles.ts  useUpload.ts
src/lib/: abortRegistry.ts  browserFolderPicker.ts  chunkManager.ts  confirm.ts  downloadCacheManager.ts  fileIcons.ts  isTauri.ts  logger.ts  retryHelper.ts  tauriFolderPicker.ts  tauriStorage.ts  threadPool.ts  transferLogger.ts  utils.ts
src/services/: api.ts  bucketService.ts  chunkedDownload.ts  chunkedUpload.ts  fileService.ts  r2Client.ts
src/stores/: bucketStore.ts  configStore.ts  fileStore.ts  themeStore.ts  transferStore.ts
src/styles/: globals.css
src/types/: bucket.ts  chunk.ts  config.ts  file.ts  retry.ts  threadPool.ts  transfer.ts
(+34 files in other folders)
